[package]
name = "rustzeos"
version = "0.1.0"
edition = "2018"

[lib]
name = "rustzeos"
path = "src/rustzeos.rs"
# use this to build as wasm for use in JS
crate-type = ["cdylib"]

[dependencies]
bellman = { version = "0.10.0" }
#bellman = { git = "https://github.com/mschoenebeck/bellman" }
blake2s_simd = "0.5"
bls12_381 = { version = "0.5" }
#ff = { version = "0.10.1" }
#rand = "0.8.4"
#pairing = { version = "0.20", optional = true }
#sha2 = "0.9.5"
#x25519-dalek = "1.1.1"
#curve25519-dalek = "3.2.0"
#rand_core = "0.5.0"
#aes = "0.7.5"
#hex = "0.4.3"
## MPC
#phase2 = "0.2.1"
#byteorder = "1"
#base64 = "0.13.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
#bincode = "1.3.3"
#libc = "0.2.101"
#wasm-bindgen = "0.2.79"
#getrandom = { version = "0.2.3", features = ["js"] }
#web-sys = { version="0.3.5", features=[ "console" ] }
# Halo 2
halo2_proofs = "0.2"
memuse = { version = "0.2", features = ["nonempty"] }
pasta_curves = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
